# fightforpearl

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  EVALUATION.md  GAME_DESIGN.md  PROJECT.md  README.md  SPEC.md  TODO.md  battle_log.json  crawl_lightcones.py  pyproject.toml  scrape_final.py  scrape_lightcones.py  scrape_lightcones_v2.py  scrape_v3.py
agents/: evaluator_prompt.md  task_prompt.md  workflow_state.md
data/: characters.json  enemies.json  enemy_ai.json  lightcone_effects.json  lightcone_effects_pool.json  skills.json
data/lightcones/: 23001.json  23002.json  23003.json  23004.json  23005.json  23006.json  23007.json  23008.json  23009.json  23010.json  23011.json  23012.json  23013.json  23014.json  23015.json  23016.json  23017.json  23018.json  23019.json  23020.json  23021.json  23022.json  23023.json  23024.json  23025.json  23026.json  23027.json  23028.json  23029.json  23030.json  23031.json  23032.json  23033.json  23034.json  23035.json  23036.json  23037.json  23038.json  23039.json  23040.json  (+21 more)
data/pending/: acheron_raw.txt  aglaea_raw.txt  anaxa_raw.txt  archer_raw.txt  argenti_raw.txt  arlan_raw.txt  asta_raw.txt  aventurine_raw.txt  bailu_raw.txt  blade_raw.txt  (+61 more)
src/: __init__.py
tests/: conftest.py  test_aoe.py  test_battle.py  test_battle_design.md  test_battle_full.py  test_break.py  test_celydra.py  test_character.py  test_damage_numbers.py  test_enemy_ai.py  test_followup.py  test_gui.py  test_hysilens.py  test_monster_queue.py  test_player_input.py  test_relic.py  test_simulated_universe.py  test_skills.py
web_demo/: index.html
(+129 files in other folders)
