[project]
name = "fightforpearl"
version = "0.1.0"
description = "类崩坏星穹铁道回合制战斗框架"
requires-python = ">=3.12"
dependencies = ["pygame>=2.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/game"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
